# sketchy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  agent_registry.json  roadmap.json
.agent_config/: feedback_schema.yaml  task_handoff_schema.json
docs/: DEVELOPMENT_SUMMARY.md  EULER_OPERATORS.md  WINGS3D_ANALYSIS.md
include/sketchy/kernel/: geometry.h  winged_edge.h
include/sketchy/modeling/: extrusion.h  tools.h
orchestrator/: pm_agent.py
src/: main.cpp
src/core_kernel/: CMakeLists.txt  edge.cpp  face.cpp  geometry.cpp  vertex.cpp  winged_edge.cpp
src/core_kernel/modeling/: CMakeLists.txt  extrusion.cpp  tools.cpp
src/kernel/: CMakeLists.txt  demo_euler.cpp  geometry.cpp  geometry.h  winged_edge.cpp  winged_edge.h
tests/: CMakeLists.txt
tests/unit/: test_euler_operators.cpp  test_geometry.cpp  test_winged_edge.cpp
